# sedinfer

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: cigale_backend.md  design.md  experimental_fsps_cigale.md  experimental_jaxcigale.md
examples/: cigale_photometry_demo.py  experimental_cigale_escape_fraction_sweep.py  experimental_cigale_fsps_bc03_parameter_sweep.py  experimental_cigale_fsps_stellar_sanity.py  experimental_cigale_mock_jaxcigale_cue_nuts.py  experimental_cue_jax_port_comparison.py  experimental_dsps_cue_nebular_validation.py  experimental_dsps_fsps_clock_diagnostic.py  experimental_fsps_nebular_vs_cigale_nebular.py  experimental_jaxcigale_dsps_nuts_recovery.py  experimental_jaxcigale_dust_attenuation_diagnostic.py  experimental_jaxcigale_photometry_demo.py  fsps_photometry_demo.py  sbi_mock_photometry_demo.py  validate_fsps_backend.py  validation_backend_cross_validation.py
inftools/: __init__.py  core.py  grid.py  laplace.py  mcmc.py  mixed_tamis.py  plotting.py  pocomc_adapter.py  sbi.py  tamis_adapter.py  transforms.py
notebooks/: cosmos2020_sbi_fsps_gpu_timing.ipynb  experimental_fsps_spectrum_fitting.ipynb  experimental_jaxcigale_nuts_assessment.ipynb
sedinfer/: __init__.py  data.py  filters.py  likelihood.py  parameters.py  priors.py  runners.py  units.py
tests/: test_cigale_backend.py  test_fsps_backend.py  test_fsps_real_validation.py  test_grid_sampling.py  test_likelihood.py  test_mcmc.py  test_mixed_tamis.py  test_popcosmos.py  test_priors_parameters.py  test_sbi.py  test_spectral_likelihood.py
(+46 files in other folders)
