[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sedinfer"
version = "0.1.0"
description = "Small interfaces for Bayesian SED fitting and photo-z inference."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Gregoire" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "astropy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "matplotlib",
]
fsps = [
  "sedpy",
]
sbi = [
  "torch",
  "nflows",
]
all = [
  "sedpy",
  "torch",
  "nflows",
  "matplotlib",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sedinfer*", "inftools*"]
